--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <h4 class="texto-erro">campo obrigatório</h4>
             <input class="input-text" type="text" name="telefone" id="telefone" placeholder="Telefone *">
             <h4 class="texto-erro">campo obrigatório</h4>
-            <input class="input-text" type="text" name="mensagem" id="mensagem" placeholder="Mensagem *">
+            <textarea class="input-text" name="mensagem" id="mensagem" placeholder="Mensagem *"></textarea>
             <h4 class="texto-erro">campo obrigatório</h4>
             <h3>*campos obrigatórios</h3>
-            <input type="submit" value="Enviar" class="enviar">
+            <button type="submit" class="enviar">Enviar</button>
         </form>
     </section>
 
